	  silence wrong warning 6011

2017-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: fix minor memory leaks in configuration code

2017-02-07  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: [!COB_GEN_SCREENIO] fixed zero_line_col_allowed
	  missing / superfluous in function declarations

2017-02-07  Ron Norman <rjn@inglenet.com>
	* common.c,common.h,coblocal.h:
	  Added COB_TRACE_IO to runtime.conf
	* termio.c:
	  Added cob_print_field to be used by fileio Trace code
	* fileio.c:
	  Added trace code to save_status.
	  Added check for IO_fdname and check for 'trace' option

2017-02-06  Ron Norman <rjn@inglenet.com>

	* common.c, common.h:
	  added cob_module_free so that structure gets freed within libcob
	* fileio.c, common.h:
	  Added new routines cob_file_external_addr, cob_file_malloc, cob_file_free
	  so that 'cob_file' is allocated within libcob.
	  This will allow the stucture have fields added to the end
	  without forcing a recompile.

2017-02-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, call.c: [__MINGW32__] fixes for mixed printf
	  format modifiers for long long
	* common.c: [WIN32] check if PROCESS_QUERY_LIMITED_INFORMATION is
	  actually defined (not the case for MINGW and old VC versions)

2017-02-01  Ron Norman <rjn@inglenet.com>

	* common.c, common.h:
	  Corrections to routines for handling -ftrace, -ftraceall & -fdump=ALL

2017-01-30  Ron Norman <rjn@inglenet.com>

	* termio.c: for -fdump=ALL,IO; Dump FILE STATUS value

2017-01-25  Ron Norman <rjn@inglenet.com>

	* common.c, common.h, coblocal.h, termio.c:
	  New routines for handling -ftrace, -ftraceall & -fdump=<scope>
	  -fdump=<scope> causes code to be generated that will dump out data
	  variables in the event of a program abort or abnormal end
	  New runtime.cfg/env-vars:
	      COB_DUMP_FILE, COB_DUMP_FORMAT, COB_DUMP_WIDTH
	  The old trace routines have been kept for backward compatible

2017-01-18  Ron Norman <rjn@inglenet.com>
