@@ -154,6 +154,21 @@
 #          Default:  100
 #          Example:  dump_width 120
 
+# Environment name:  COB_STATS_RECORD
+#   Parameter name:  stats_record
+#          Purpose:  define if I/O statistics should be written
+#             Type:  boolean
+#          Default:  false
+#          Example:  STATS_RECORD true
+
+# Environment name:  COB_STATS_FILE
+#   Parameter name:  stats_file
+#          Purpose:  to define where COBOL I/O statistics should be written
+#                    The file is appended to
+#             Type:  string 
+#          Default:  stderr
+#          Example:  STATS_FILE  ${HOME}/mystats.txt
+
 # Environment name:  COB_CURRENT_DATE
 #   Parameter name:  current_date
 #          Purpose:  specify an alternate Date/Time to be returned to ACCEPT
