@@ -247,6 +247,8 @@ typedef struct __cob_settings {
 	unsigned int	cob_retry_times;	/* Default: RETRY n TIMES value */
 	unsigned int	cob_retry_seconds;	/* Default: RETRY n SECONDS value */
 	unsigned int	cob_trace_io;		/* If TRACE READY, also dump File/Record/Status */
+	unsigned int	cob_stats_record;	/* If record I/O statics */
+	char		*cob_stats_filename;	/* Place to write I/O stats */
 	char 		*cob_file_path;
 	char		*bdb_home;
 	size_t		cob_sort_memory;
