@@ -837,6 +837,13 @@
 
 2017-02-07  Ron Norman <rjn@inglenet.com>
 	* common.c,common.h,coblocal.h:
+	  Added COB_STATS_RECORD & COB_STATS_FILE to runtime.conf
+	* fileio.c:
+	  Added stats code to save_status.
+	  Added check for IO_fdname and check for 'stats' option
+
+2017-02-07  Ron Norman <rjn@inglenet.com>
+	* common.c,common.h,coblocal.h:
 	  Added COB_TRACE_IO to runtime.conf
 	* termio.c:
 	  Added cob_print_field to be used by fileio Trace code
